--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ h2 {
 }
 
 .portfolio h2 {
-	margin-bottom: 0;
+	margin-top: 0;
 	padding-top: 100px;
 } 
 
@@ -274,6 +274,10 @@ h2 {
 	margin-bottom: 0;
 }
 
+.aboutUs img {
+	max-width: 100%;
+}
+
 .team {
 	 background: #f9f9f9;
 	 text-align: center;
@@ -316,6 +320,14 @@ h2 {
   	letter-spacing: -0.4px;
   	padding: 30px 0 120px 0;
   	line-height: 25px;
+}
+
+.team a {
+	color: #000;
+}
+
+.team a:hover {
+	color: #fed136;
 }
 
 .name {
